--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,5 @@ BugReports: https://github.com/idiv-biodiversity/LCP/issues
 License: MIT + file LICENSE 
 Encoding: UTF-8
 LazyData: true
-Depends: R >= 3.5.0
+Depends: R (>= 3.5.0)
 RoxygenNote: 7.1.0
